--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "fcc-learn-npm-package-json",
-	"author": "shon",
+	"author": "author",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
